--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.diegojacober.delivery.Delivery</exec.mainClass>
     </properties>
-     <build>
+    <build>
         <resources>
             <resource>
                 <directory>src/main/java</directory>
@@ -25,6 +25,20 @@
             <version>8.0.33</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- Dependência para o Apache HttpClient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version> <!-- Use a versão mais recente -->
+        </dependency>
+
+        <!-- Dependência para a biblioteca JSON -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version> <!-- Use a versão mais recente -->
+        </dependency>
+        
 
     </dependencies>
 </project>
