--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,11 @@
         </resources>
     </build>
     <dependencies>
+        
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
             <scope>runtime</scope>
         </dependency>
         <!-- Dependência para o Apache HttpClient -->
