--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,11 @@
             <artifactId>json</artifactId>
             <version>20210307</version> <!-- Use a versão mais recente -->
         </dependency>
-        
 
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
 </project>
